--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,101 @@
+* {
+  margin: 0px;
+}
+
+/* estilo encabezado */
+nav {
+  height: 100px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+/* estilo de la imagen del encabezado */
+.navbar-image {
+  width: 160px;
+}
+
+/* estilo de buscar */
+.searchbar-container {
+  display: flex;
+  margin: 0px 10px;
+  padding: 0;
+  align-items: center;
+  flex: 1;
+  align-items: stretch;
+}
+/* estilo del buscador */
+.searchbar {
+  background: white;
+  padding-right: 20px;
+  flex: 1;
+}
+
+/* estilo barra buscar */
+.searchbar input {
+  padding: 10px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+  border-radius: 3px;
+  width: 100%;
+}
+
+/* estilo del btn buscar */
+.searchbar-btn button {
+  background-color: #e58112;
+  border-radius: 10px;
+  height: 100%;
+  color: white;
+  padding: 10px 12px;
+  margin-left: 20px;
+}
+
+/* estilo del cuerpo del titulo y del numero de pokemones*/
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+
+/* estilo de cuadros de pokemones */
+.pokedex-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 18px;
+  padding: 0px 10px 20px 10px;
+}
+
+/* estilo de la descripcion del tipo del pokemon las primeras en mayusculas*/
+.pokemon-type-text {
+  text-transform: capitalize;
+}
+
+/* estilo para la paginacion */
+.pagination {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+/* estilo de letra para la api */
 .App {
   font-family: sans-serif;
-  text-align: center;
+}
+
+/* estilo en los botones de las flechas de la paginacion */
+.icon {
+  width: 28px;
+  height: 28px;
+}
+
+/*  */
+.pagination-btn {
+  background-color: #e58112;
+  border: none;
+  width: 32px;
+  height: 32px;
+  align-items: center;
+  justify-content: center;
 }
