--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
   margin: 0px;
 }
 
+/* estilo encabezado */
 nav {
   height: 100px;
   display: flex;
@@ -10,10 +11,12 @@ nav {
   align-items: center;
 }
 
+/* estilo de la imagen del encabezado */
 .navbar-image {
   width: 160px;
 }
 
+/* estilo de buscar */
 .searchbar-container {
   display: flex;
   margin: 0px 10px;
@@ -22,28 +25,24 @@ nav {
   flex: 1;
   align-items: stretch;
 }
-
+/* estilo del buscador */
 .searchbar {
   background: white;
   padding-right: 20px;
   flex: 1;
 }
 
+/* estilo barra buscar */
 .searchbar input {
   padding: 10px;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
   border-radius: 3px;
-  border: none;
   width: 100%;
 }
 
-.searchbar input:focus {
-  outline: none;
-}
-
+/* estilo del btn buscar */
 .searchbar-btn button {
-  background-color: #363636;
-  border: none;
+  background-color: #e58112;
   border-radius: 10px;
   height: 100%;
   color: white;
@@ -51,6 +50,7 @@ nav {
   margin-left: 20px;
 }
 
+/* estilo del cuerpo del titulo y del numero de pokemones*/
 .header {
   display: flex;
   flex-direction: row;
@@ -59,6 +59,7 @@ nav {
   padding: 10px;
 }
 
+/* estilo de cuadros de pokemones */
 .pokedex-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -66,119 +67,35 @@ nav {
   padding: 0px 10px 20px 10px;
 }
 
-@media screen and (max-width: 992px) {
-  .pokedex-grid {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .pokedex-grid {
-    grid-template-columns: repeat(1, 1fr);
-  }
-}
-
-.pokemon-card {
-  display: flex;
-  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 3px;
-}
-
-.pokemon-img-container {
-  padding: 0px 5px;
-}
-
-.pokemon-img {
-  width: 70px;
-  height: 70px;
-}
-
-.pokemon-type {
-  display: flex;
-}
-
+/* estilo de la descripcion del tipo del pokemon las primeras en mayusculas*/
 .pokemon-type-text {
-  margin-right: 10px;
   text-transform: capitalize;
 }
 
-.card-body {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 10px 10px 10px 10px;
-  flex: 1;
-}
-
-.card-top {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.card-bottom {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.card-top h3 {
-  text-transform: capitalize;
-}
-
+/* estilo para la paginacion */
 .pagination {
   display: flex;
   flex-direction: row;
   align-items: center;
 }
 
+/* estilo de letra para la api */
 .App {
   font-family: sans-serif;
 }
 
+/* estilo en los botones de las flechas de la paginacion */
 .icon {
   width: 28px;
   height: 28px;
 }
 
+/*  */
 .pagination-btn {
-  background-color: black;
+  background-color: #e58112;
   border: none;
-  border-radius: 50%;
   width: 32px;
   height: 32px;
-  margin: 0px 8px;
-  display: flex;
   align-items: center;
   justify-content: center;
-  cursor: pointer;
-}
-
-.pokemon-heart-btn {
-  border: none;
-  background-color: #f0f0f0;
-  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.25);
-  padding: 4px;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.not-found-text {
-  text-align: center;
-  font-size: 1.25rem;
-  padding: 20px;
-}
-
-footer {
-  font-family: inherit;
-  background-color: #363636;
-  padding: 10px;
-  color: white;
-  text-align: center;
-  font-size: 1.1rem;
-}
-footer a {
-  color: #e58112;
 }
