--- a/src/styles.css
+++ b/src/styles.css
@@ -8,12 +8,11 @@ nav {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  align-items: center;
 }
 
 /* estilo de la imagen del encabezado */
 .navbar-image {
-  width: 160px;
+  width: 190px;
 }
 
 /* estilo de buscar */
@@ -50,7 +49,7 @@ nav {
   margin-left: 20px;
 }
 
-/* estilo del cuerpo del titulo y del numero de pokemones*/
+/* estilo del cuerpo del titulo y del paginacion de pokemones*/
 .header {
   display: flex;
   flex-direction: row;
@@ -81,7 +80,7 @@ nav {
 
 /* estilo de letra para la api */
 .App {
-  font-family: sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 /* estilo en los botones de las flechas de la paginacion */
@@ -94,8 +93,8 @@ nav {
 .pagination-btn {
   background-color: #e58112;
   border: none;
-  width: 32px;
-  height: 32px;
+  width: 27px;
+  height: 26px;
   align-items: center;
   justify-content: center;
 }
